package com.m2i.poo.bank;

import java.util.ArrayList;

public class Customer {
    private ArrayList<Integer> idList = new ArrayList<Integer>();
    int id = 0;
    String firstName, lastName;


    public Customer() {

    }

}
