package com.m2i.poo.bank;

public class Transaction {


}
