package com.m2i.poo.tpmedia;

public class Publisher {
    private int id;
    private String nom;

    public Publisher(int id, String nom) {
        this.id = id;
        this.nom = nom;
    }


    public Publisher() {
    }


}
