package com.m2i.poo;

public class Main {
    public static void main(String[] args) {

    }
}
