package com.m2i.poo.baseamine;

public class Symbole {
    String symbole;
//    char t[];


    public Symbole(String symbole) {
        symbole = this.symbole;
    }

    public Symbole() {
    }



 /*   public void conv(){
        for (int i:tab){
            switch (tab[i]){
                case 'a':
                    System.out.println("adénine");
                    break;
                case 'c':
                    System.out.println("cytosine");
                    break;
                case 'g':
                    System.out.println("guanine");
                    break;
                case 't':
                    System.out.println("thymine");
                    break;
                case 'u':
                    System.out.println("turacile");
                    break;

            }
        }
    } */


}


