@startuml

title __FORMATION's Class Diagram__\n

  package com.m2i.poo {
    package com.m2i.poo.bank {
      class Account {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.bank {
      package com.m2i.poo.bank.bankcorrec {
        class Account {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class AminoAcid {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Author {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class Base {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      class Base {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Book {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Carre {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Cart {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class CartRow {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Cd {
      }
    }
  }
  

  package com.m2i.poe {
    class Collection {
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.bank {
      package com.m2i.poo.bank.bankcorrec {
        class Customer {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.bank {
      class Customer {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class DNA {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      class Dna {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Dvd {
      }
    }
  }
  

  package com.m2i.poo {
    class Main {
    }
  }
  

  package com.m2i.poe {
    class Main {
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      class Main {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.bank {
      package com.m2i.poo.bank.bankcorrec {
        class Main {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Main {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class Main {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      abstract class Media {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Point {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Point3d {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Program {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      class Publisher {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      package com.m2i.poo.baseamine.baseaminecorrec {
        class RNA {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Rectangle {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      class Rna {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.baseamine {
      class Symbole {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.bank {
      package com.m2i.poo.bank.bankcorrec {
        class Transaction {
        }
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.bank {
      class Transaction {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class TriangleRectangle {
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.tpmedia {
      interface iMedia {
      }
    }
  }
  

  Account o-- Customer : customer
  Book -up-|> Media
  Carre -up-|> Rectangle
  CartRow o-- iMedia : media
  Cd -up-|> Media
  Dvd -up-|> Media
  Media -up-|> iMedia
  Media o-- Publisher : publisher
  Point3d -up-|> Point
  Rectangle o-- Point : origin
  Transaction o-- Account : fromAccount
  Transaction o-- Account : toAccount
  TriangleRectangle -up-|> Rectangle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
